# docs/api-doc.yaml
@@ -244,6 +244,10 @@ paths:
                 type: string
               businessCategory:
                 type: string
+              taxId:
+                type: string 
+              socialLink:
+                type: string
       responses:
         200:
           description: Success
